--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "firebase": "^10.13.0",
     "next": "14.2.5",
     "next-intl": "^3.17.6",
     "react": "^18",
