--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "vite": "^5.3.5",
     "vite-tsconfig-paths": "^4.3.2",
