--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.1.2",
     "vite": "^5.3.5",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0"
