--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "test:single": "vitest run"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@uiw/react-codemirror": "^4.23.0",
+    "codemirror": "^6.0.1",
     "firebase": "^10.13.0",
     "next": "14.2.5",
     "next-intl": "^3.17.6",
