feat: add json formater

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lint": "^6.8.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@uiw/react-codemirror": "^4.23.0",
     "codemirror": "^6.0.1",
     "firebase": "^10.13.0",
+    "jsonlint-mod": "^1.7.6",
     "next": "14.2.5",
     "next-intl": "^3.17.6",
     "react": "^18",
