--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lint": "^6.8.1",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@uiw/react-codemirror": "^4.23.0",
     "codemirror": "^6.0.1",
