--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "test:single": "vitest run"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.13.0",
     "next": "14.2.5",
