--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uiw/react-codemirror": "^4.23.0",
     "codemirror": "^6.0.1",
     "firebase": "^10.13.0",
+    "graphql": "^16.9.0",
     "next": "14.2.5",
     "next-intl": "^3.17.6",
     "react": "^18",
