--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.3.0",
+    "graphql-formatter": "^1.0.3",
     "husky": "^9.1.3",
     "jsdom": "^24.1.1",
     "next-router-mock": "^0.9.13",
