--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/state": "^6.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@uiw/codemirror-extensions-langs": "^4.23.2",
     "@uiw/react-codemirror": "^4.23.0",
     "codemirror": "^6.0.1",
     "firebase": "^10.13.0",
@@ -34,6 +36,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.2",
+    "redux-mock-store": "^1.5.4",
     "vite": "^5.3.5",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0"
@@ -44,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-mock-store": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
     "@vitejs/plugin-react": "^4.3.1",
