--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:single": "vitest run"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lint": "^6.8.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/state": "^6.4.1",
