fix: messeges; init: jsonlint-mod

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
-    "@codemirror/lint": "^6.8.1",
-    "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lint": "^6.8.1",
     "@codemirror/state": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
@@ -31,6 +31,7 @@
     "codemirror": "^6.0.1",
     "firebase": "^10.13.0",
     "graphql": "^16.9.0",
+    "jsonlint-mod": "^1.7.6",
     "next": "14.2.5",
     "next-intl": "^3.17.6",
     "react": "^18",
