--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
     "incremental": true,
+    "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
       "@/*": ["./src/*"]
     },
