--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky",
     "format:fix": "prettier . --write",
     "test": "vitest run --coverage --reporter verbose",
-    "test:single": "vitest run"
+    "test:single": "vitest run",
+    "export": "next export"
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
